Publish version 1.2 built with Java 11